--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,59 @@
+name: Test changes
+on:
+    push:
+    pull_request:
 
-name: Cypress tests
-on: [push]
+env:
+    PRIMARY_NODEJS_VERSION: 22
+
 jobs:
-  cypress-run:
-    name: Cypress run
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    cypress-run:
+        name: Cypress run
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Setup node ${{ env.PRIMARY_NODEJS_VERSION }}
+              uses: actions/setup-node@v4
+              with:
+                node-version: ${{ env.PRIMARY_NODEJS_VERSION }}
+                cache: "npm"
 
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '20.x'
+            - run: npm ci
+            - run: npm run transpile
 
-      - run: npm ci
-      - run: npm run transpile
+            - name: Cypress run
+              uses: cypress-io/github-action@v6
+              with:
+                start: npm run cypress:server
+                wait-on: 'http://localhost:8124'
+                record: true
+              env:
+                CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm run cypress:server
-          wait-on: 'http://localhost:8124'
-          record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    lint:
+        name: Lint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Setup node ${{ env.PRIMARY_NODEJS_VERSION }}
+              uses: actions/setup-node@v4
+              with:
+                node-version: ${{ env.PRIMARY_NODEJS_VERSION }}
+                cache: "npm"
+            - run: npm ci
+            - run: npm run lint
+
+    typecheck:
+        name: TypeScript typings
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Setup node ${{ env.PRIMARY_NODEJS_VERSION }}
+                uses: actions/setup-node@v4
+                with:
+                node-version: ${{ env.PRIMARY_NODEJS_VERSION }}
+                cache: "npm"
+            - run: npm ci
+            - run: npm run typecheck
+        
