--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dependencies": {
         "@discoveryjs/json-ext": "^0.6.3",
         "codemirror": "^5.65.2",
+        "diff": "^8.0.2",
         "github-slugger": "^2.0.0",
         "hitext": "^1.0.0-beta.1",
         "jora": "1.0.0-beta.15",
